@@ -1,3 +1,9 @@
+lorm 0.2.8 2016-8-22
+
+[NEW]   Connection: add begin, rollback, commit
+[NEW]   QuerySet: add update, delete with argument.
+
+
 lorm 0.2.3 2016-8-20
 
 [NEW]   MysqlPool add max_connections
